# redirector

./: .gitignore  LICENSE  Makefile.am  README.md  config  configure.ac  configure.sh  nginx-test.sh  test-all.sh  test-nginx.sh  test-valgrind.sh  test.sh  valgrind.sh
nginx-src/: ngx_http_redirector_module.c  ngx_http_redirector_module.h
nginx-tests/: redirector.t
src/: Makefile.am  main.c  query.c  query.h  redirector.c  redirector.h  uri.c  uri.h  utils.c  utils.h
tests/: Makefile.am  check_redirector.c  query.c  resolv-mock.conf
